--- a/home/home-6.html
+++ b/home/home-6.html
@@ -90,7 +90,7 @@
                         <!-- SLIDE  -->
                         <li data-index="rs-29" data-transition="slideoverleft" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000" data-thumb="assets/images/slider/thumb/12.png">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/images/slider/bg/2a25d39b-cc79-4b41-a84a-8e51bb424c67.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+                            <img src="assets/images/slider/bg/55.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
 
                             <!-- LAYER NR. 1 -->
@@ -101,12 +101,12 @@
                             <!-- LAYER NR. 2 -->
                             <div class="tp-caption   tp-resizeme" id="slide-29-layer-5" data-x="['left','left','left','left']" data-hoffset="['616','454','110','70']" data-y="['top','top','top','top']" data-voffset="['227','214','258','204']" data-fontsize="['140','140','100','60']"
                                 data-lineheight="['140','140','100','60']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":1700,"speed":1500,"frame":"0","from":"z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">Wood <br> Table </div>
+                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">PRO <br> Resume </div>
                         </li>
                         <!-- SLIDE  -->
                         <li data-index="rs-33" data-transition="scaledownfrombottom" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000" data-thumb="assets/images/slider/thumb/13.png">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/images/slider/bg/5.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+                            <img src="assets/images/slider/bg/66.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
 
                             <!-- LAYER NR. 5 -->
@@ -117,14 +117,14 @@
                             <!-- LAYER NR. 6 -->
                             <div class="tp-caption   tp-resizeme" id="slide-33-layer-5" data-x="['left','left','left','left']" data-hoffset="['617','454','110','70']" data-y="['top','top','top','top']" data-voffset="['227','214','258','204']" data-fontsize="['140','140','100','60']"
                                 data-lineheight="['140','140','100','60']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":1700,"speed":1600,"frame":"0","from":"x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">Hebes <br> Chair
+                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">Modern <br> Resume
                             </div>
 
                         </li>
                         <!-- SLIDE  -->
                         <li data-index="rs-34" data-transition="slidingoverlayleft" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000" data-thumb="assets/images/slider/thumb/14.png">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/images/slider/bg/6.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+                            <img src="assets/images/slider/bg/44.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
 
                             <!-- LAYER NR. 9 -->
@@ -135,13 +135,13 @@
                             <!-- LAYER NR. 10 -->
                             <div class="tp-caption   tp-resizeme" id="slide-34-layer-5" data-x="['left','left','left','left']" data-hoffset="['617','454','110','70']" data-y="['top','top','top','top']" data-voffset="['227','214','258','204']" data-fontsize="['140','140','100','60']"
                                 data-lineheight="['140','140','100','60']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":1700,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">Chair<br> Yellow </div>
+                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">COOL<br> DESIGN </div>
 
                         </li>
                         <!-- SLIDE  -->
                         <li data-index="rs-35" data-transition="slideremoveup" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000" data-thumb="assets/images/slider/thumb/15.png">
                             <!-- MAIN IMAGE -->
-                            <img src="assets/images/slider/bg/7.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+                            <img src="assets/images/slider/bg/54.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
 
                             <!-- LAYER NR. 13 -->
@@ -152,7 +152,7 @@
                             <!-- LAYER NR. 14 -->
                             <div class="tp-caption   tp-resizeme" id="slide-35-layer-5" data-x="['left','left','left','left']" data-hoffset="['617','454','110','70']" data-y="['top','top','top','top']" data-voffset="['227','214','258','204']" data-fontsize="['140','140','100','60']"
                                 data-lineheight="['140','140','100','60']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":1700,"speed":2000,"sfxcolor":"#ffffff","sfx_effect":"blockfrombottom","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">Wood<br> Decor </div>
+                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 140px; line-height: 140px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat;">LATEST<br> MODELS </div>
 
                         </li>
                     </ul>
