--- a/home/home-6.html
+++ b/home/home-6.html
@@ -10,7 +10,7 @@
     <meta name="author" content="zytheme" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Multi-purpose Business html5 template">
-    <link href="assets/images/favicon/favicon.png" rel="icon">
+    <link href="assets/images/favicon/iconl.png" rel="icon">
 
 
     <!-- Fonts
@@ -37,7 +37,7 @@
 
     <!-- Document Title
     ============================================= -->
-    <title>Home</title>
+    <title>CV TEMP</title>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
             <nav id="primary-menu" class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#"><img style="width: 50px;" src="/projet_web/home/assets/images/logo/1.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img style="width: 160px; height: 56px;" src="/projet_web/home/assets/images/logo/logo-cv.png" alt=""></a>
                     </div>
                     <ul class="nav navbar-nav">
                         <li><a href="#">Home</a></li>
@@ -285,16 +285,16 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-3">
                         <div class="cat--list-desc">
-                            <p>Our agency can only be as strong as our people and because of this, our team have run their own businesses, designed game changing products, consulted for companies as well as competed collegiately and professionally when it
-                                comes to sports.</p>
+                            <p> <b style="font-size: 20px;"> Pick a resume template. Make it more you !</b> <br>Create beautiful, professional resumes in minutes, free. Here’s a million design combinations. Do what you want. Whether you’re a nurse or engineer,
+                                your resume will always stand out. </p>
                         </div>
                     </div>
                     <!-- .col-lg-3 end -->
                     <div class="col-sm-12 col-md-4 col-lg-3">
                         <div class="cat--list-item">
                             <a href="#">
-                                <img src="assets/images/categories/list/1.jpg" alt="img">
-                                <h4># Furniture</h4>
+                                <img style="width: 270px; height: 370px;" src="assets/images/categories/list/1.png" alt="img">
+                                <h4># New</h4>
                             </a>
                         </div>
                     </div>
@@ -302,8 +302,8 @@
                     <div class="col-sm-12 col-md-4 col-lg-3">
                         <div class="cat--list-item">
                             <a href="#">
-                                <img src="assets/images/categories/list/2.jpg" alt="img">
-                                <h4># Lighting</h4>
+                                <img style="width: 270px; height: 370px;" src="assets/images/categories/list/2.png" alt="img">
+                                <h4># Modern</h4>
                             </a>
                         </div>
                     </div>
@@ -311,8 +311,8 @@
                     <div class="col-sm-12 col-md-4 col-lg-3">
                         <div class="cat--list-item">
                             <a href="#">
-                                <img src="assets/images/categories/list/3.jpg" alt="img">
-                                <h4># Accessories</h4>
+                                <img style="width: 270px; height: 370px;" src="assets/images/categories/list/3.png" alt="img">
+                                <h4># Professional</h4>
                             </a>
                         </div>
                     </div>
@@ -336,12 +336,12 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-8 col-lg-8">
                         <div class="heading heading-2 mb-30">
-                            <h2 class="heading--title">Featured Products</h2>
+                            <h2 class="heading--title">Featured Templates</h2>
                         </div>
                     </div>
                     <!-- .col-lg-8 end -->
                     <div class="col-sm-12 col-md-4 col-lg-4 text-content-right mb-30-xs">
-                        <a href="#" class="btn btn--browse-cat">Browse All Products<i class="fa fa-long-arrow-right"></i></a>
+                        <a href="/projet_web/home/shop-layout-fullwidth.html" class="btn btn--browse-cat">Browse All Templates<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                     <!-- .col-lg-4 end -->
                 </div>
@@ -359,23 +359,19 @@
                                         <div class="col-sm-6 col-md-6 col-lg-3">
                                             <div class="product-item style3">
                                                 <div class="product--img">
-                                                    <img src="assets/images/products/related/6.jpg" alt="product" />
-                                                    <span class="featured-item featured-item2">new</span>
+                                                    <img style="width: 210px; height: 272px;" src="assets/images/products/related/5.jpg" alt="product" />
+                                                    <span class="featured-item">hot</span>
+
                                                     <div class="product--hover">
                                                         <div class="product--action">
-                                                            <a data-toggle="modal" data-target="#product-popup"><i class="ti-search"></i></a>
-                                                            <a href="#"><i class="ti-heart"></i></a>
+                                                            <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
+                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
                                                 </div>
                                                 <!-- .product-img end -->
-                                                <div class="product--content">
-                                                    <div class="product--title">
-                                                        <h3><a href="product-gallery-vertical.html">Hebes Great Chair</a></h3>
-                                                    </div>
 
-                                                </div>
                                                 <!-- .product-content end -->
                                             </div>
                                         </div>
@@ -384,22 +380,17 @@
                                         <div class="col-sm-6 col-md-6 col-lg-3">
                                             <div class="product-item style3">
                                                 <div class="product--img">
-                                                    <img src="assets/images/products/related/7.jpg" alt="product" />
+                                                    <img style="width: 210px; height: 272px;" src="assets/images/products/related/2.jpg" alt="product" />
                                                     <div class="product--hover">
                                                         <div class="product--action">
-                                                            <a data-toggle="modal" data-target="#product-popup"><i class="ti-search"></i></a>
-                                                            <a href="#"><i class="ti-heart"></i></a>
+                                                            <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
+                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
                                                 </div>
                                                 <!-- .product-img end -->
-                                                <div class="product--content">
-                                                    <div class="product--title">
-                                                        <h3><a href="product-gallery-vertical.html">Hebes X Chair</a></h3>
-                                                    </div>
 
-                                                </div>
                                                 <!-- .product-content end -->
                                             </div>
                                         </div>
@@ -408,22 +399,17 @@
                                         <div class="col-sm-6 col-md-6 col-lg-3">
                                             <div class="product-item style3">
                                                 <div class="product--img">
-                                                    <img src="assets/images/products/related/15.jpg" alt="product" />
+                                                    <img style="width: 210px; height: 272px;" src="assets/images/products/related/3.jpg" alt="product" />
                                                     <div class="product--hover">
                                                         <div class="product--action">
-                                                            <a data-toggle="modal" data-target="#product-popup"><i class="ti-search"></i></a>
-                                                            <a href="#"><i class="ti-heart"></i></a>
+                                                            <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
+                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
                                                 </div>
                                                 <!-- .product-img end -->
-                                                <div class="product--content">
-                                                    <div class="product--title">
-                                                        <h3><a href="product-gallery-vertical.html">Hebes X Chair</a></h3>
-                                                    </div>
 
-                                                </div>
                                                 <!-- .product-content end -->
                                             </div>
                                         </div>
@@ -432,22 +418,18 @@
                                         <div class="col-sm-6 col-md-6 col-lg-3">
                                             <div class="product-item style3">
                                                 <div class="product--img">
-                                                    <img src="assets/images/products/related/9.jpg" alt="product" />
+                                                    <img style="width: 210px; height: 272px;" src="assets/images/products/related/4.jpg" alt="product" />
+                                                    <span class="featured-item featured-item2">new</span>
                                                     <div class="product--hover">
                                                         <div class="product--action">
-                                                            <a data-toggle="modal" data-target="#product-popup"><i class="ti-search"></i></a>
-                                                            <a href="#"><i class="ti-heart"></i></a>
+                                                            <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
+                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
                                                 </div>
                                                 <!-- .product-img end -->
-                                                <div class="product--content">
-                                                    <div class="product--title">
-                                                        <h3><a href="product-gallery-vertical.html">Wood Chair Decor</a></h3>
-                                                    </div>
 
-                                                </div>
                                                 <!-- .product-content end -->
                                             </div>
                                         </div>
@@ -491,7 +473,7 @@
                         <div class="col-sm-12 col-md-12 col-lg-4 text-center widget--logo">
                             <div class="widget--content">
                                 <div class="widget--logo-img">
-                                    <img src="assets/images/logo/logo-dark.png" alt="logo">
+                                    <img style="width: 160px; height: 56px;" src="/projet_web/home/assets/images/logo/logo-cv2.png" alt="logo">
                                 </div>
                             </div>
                             <div class="footer--copyright">
