--- a/home/home-6.html
+++ b/home/home-6.html
@@ -365,7 +365,8 @@
                                                     <div class="product--hover">
                                                         <div class="product--action">
                                                             <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
-                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
+                                                            <a href="/projet_web/home/download.php"><i class="fa fa-arrow-down"></i></a>
+
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
