--- a/home/home-6.html
+++ b/home/home-6.html
@@ -58,8 +58,8 @@
                         <a class="navbar-brand" href="#"><img style="width: 160px; height: 56px;" src="/projet_web/home/assets/images/logo/logo-cv.png" alt=""></a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Templates</a></li>
+                        <li><a href="./home-6.html">Home</a></li>
+                        <li><a href="./shop-layout-fullwidth.html">Templates</a></li>
                         <li><a href="#">Help Center</a></li>
                         <li><a href="#">About Us</a></li>
                     </ul>
@@ -67,20 +67,6 @@
                 </div>
             </nav>
         </header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <div class="slider slider-3 slider-6">
             <div id="rev_slider_9_1_wrapper" class="slider-mtop rev_slider_wrapper fullscreen-container" data-alias="hebes-home-6" data-source="gallery" style="background:transparent;padding:0px;">
