--- a/home/home-6.html
+++ b/home/home-6.html
@@ -56,7 +56,7 @@
                     </div>
                     <ul class="nav navbar-nav">
                         <li><a href="./home-6.html">Home</a></li>
-                        <li><a href="./shop-layout-fullwidth.html">Templates</a></li>
+                        <li><a href="shop-layout-fullwidth.php">Templates</a></li>
                         <li><a href="#">Help Center</a></li>
                         <li><a href="#">About Us</a></li>
                     </ul>
@@ -324,7 +324,7 @@
                     </div>
                     <!-- .col-lg-8 end -->
                     <div class="col-sm-12 col-md-4 col-lg-4 text-content-right mb-30-xs">
-                        <a href="/projet_web/home/shop-layout-fullwidth.html" class="btn btn--browse-cat">Browse All Templates<i class="fa fa-long-arrow-right"></i></a>
+                        <a href="shop-layout-fullwidth.php" class="btn btn--browse-cat">Browse All Templates<i class="fa fa-long-arrow-right"></i></a>
                     </div>
                     <!-- .col-lg-4 end -->
                 </div>
