--- a/home/home-6.html
+++ b/home/home-6.html
@@ -348,7 +348,7 @@
                                                     <div class="product--hover">
                                                         <div class="product--action">
                                                             <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
-                                                            <a href="/projet_web/home/download.php"><i class="fa fa-arrow-down"></i></a>
+                                                            <a href="download.php?name=templates/7.docx"><i class="fa fa-arrow-down"></i></a>
 
                                                         </div>
                                                     </div>
@@ -368,7 +368,7 @@
                                                     <div class="product--hover">
                                                         <div class="product--action">
                                                             <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
-                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
+                                                            <a href="download.php?name=templates/3.docx"><i class="fa fa-arrow-down"></i></a>
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
@@ -387,7 +387,7 @@
                                                     <div class="product--hover">
                                                         <div class="product--action">
                                                             <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
-                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
+                                                            <a href="download.php?name=templates/5.docx"><i class="fa fa-arrow-down"></i></a>
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
@@ -407,7 +407,7 @@
                                                     <div class="product--hover">
                                                         <div class="product--action">
                                                             <a data-toggle="modal" data-target="#product-popup"><i class="fa fa-paint-brush"></i></a>
-                                                            <a href="#"><i class="fa fa-arrow-down"></i></a>
+                                                            <a href="download.php?name=templates/6.docx"><i class="fa fa-arrow-down"></i></a>
                                                         </div>
                                                     </div>
                                                     <!-- .product-hover end -->
@@ -461,7 +461,7 @@
                                 </div>
                             </div>
                             <div class="footer--copyright">
-                                <span>&copy; 2019 Hebes - All Rights Reserved, by </span><a href="#">ηγέτης</a>
+                                <span>&copy; 2021 CV TEMP - All Rights Reserved, by </span><a href="#">ηγέτης</a>
                             </div>
                             <!-- .footer-copyright end -->
                         </div>
