--- a/form/filltemp.html
+++ b/form/filltemp.html
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                         <div class="form-text"></div>
-                        <a href="#" class="add-info-link3"><i class="zmdi zmdi-chevron-right"></i>Social Media</a>
+                        <a href="#" class="add-info-link3"><i class="zmdi zmdi-chevron-right"></i>Contact</a>
                         <div class="add_info3">
                             <div class="form-group">
                                 <label for="email">Email</label>
